--- a/especialidades/panaderia_pasteleria.html
+++ b/especialidades/panaderia_pasteleria.html
@@ -64,7 +64,7 @@
 
     <main>
         <section class="section-primary">
-            <h1 class="title-espec">Panadería y pastelería</h1>
+            <h1 class="title-espec">Panadería</h1>
             <div class="display-flow-especialidad">
                 <article class="wrapper-image-section-profesional">
                     <div>
@@ -85,7 +85,7 @@
                                     <p class="description">¿Quieres saber más?</p>
                                     <p class="description">
                                         Ponte en contacto con <b>Juan&nbsp;Jóse,</b> el coordinador técnico del skill de
-                                        <b>Panadería&nbsp;y&nbsp;pastelería</b>
+                                        <b>Panadería</b>
                                     </p>
                                     <a href="mailto:jj.civerabendicho@edu.gva.es" class="mail">jj.civerabendicho@edu.gva.es</a>
                                 </div>
@@ -104,15 +104,11 @@
 
                     <p class="text subtitulo">Ciclos formativos relacionados</p>
                     <ul class="text text-padding-profesional">
-                        <li>Técnico en Cocina y Gastronomía</li>
-                        <li>Técnico en <b>Servicios de Restauración</b></li>
-                        <li>Técnico en <b>Elaboración de Productos Alimenticios</b></li>
-                        <li>Técnico en <b>Panadería, Repostería y Confitería</b></li>
-                        <li>Técnico Superior en <b>Dirección de Cocina</b></li>
-                        <li>
-                            Técnico Superior en
-                            <b>Dirección de Servicios de Restauración</b>
-                        </li>
+                        <li>Técnico en <b>Cocina y gastronomía.</b></li>
+                        <li>Técnico Superior en <b>Dirección de cocina.</b></li>
+                        <li>Curso de Especialización en <b>Panadería y bollería artesanal.</b></li>
+                        <li>Técnico en <b>Panadería, repostería y confitería</b></li>
+                        <li>Técnico en <b>Elaboración de productos alimenticios</b></li>
                     </ul>
                     <p class="text subtitulo">Aplicaciones</p>
                     <p class="text-profesional">
@@ -131,7 +127,7 @@
                             <p class="description">¿Quieres saber más?</p>
                             <p class="description">
                                 Ponte en contacto con <b>Juan&nbsp;Jóse,</b> el coordinador técnico del skill de
-                                <b>Panadería&nbsp;y&nbsp;pastelería</b>
+                                <b>Panadería</b>
                             </p>
                             <a href="mailto:jj.civerabendicho@edu.gva.es" class="mail">jj.civerabendicho@edu.gva.es</a>
                         </div>
