--- a/especialidades/panaderia_pasteleria_vlc.html
+++ b/especialidades/panaderia_pasteleria_vlc.html
@@ -64,7 +64,7 @@
 
     <main>
         <section class="section-primary">
-            <h1 class="title-espec">Fleca i pastisseria</h1>
+            <h1 class="title-espec">Fleca</h1>
             <div class="display-flow-especialidad">
                 <article class="wrapper-image-section-profesional">
                     <div>
@@ -84,7 +84,7 @@
                                     <p class="description">Vols saber més?</p>
                                     <p class="description">
                                         Posa't en contacte amb <b>Juan&nbsp;Jóse,</b> el coordinador tècnic del skill de
-                                        <b>Fleca&nbsp;i&nbsp;pastisseria</b>
+                                        <b>Fleca</b>
                                     </p>
                                     <a href="mailto:jj.civerabendicho@edu.gva.es" class="mail">jj.civerabendicho@edu.gva.es</a>
                                 </div>
@@ -103,14 +103,11 @@
 
                     <p class="text subtitulo">Cicles formatius relacionats</p>
                     <ul class="text text-padding-profesional">
-                        <li>Tècnic en Cuina i Gastronomia</li>
-                        <li>Tècnic en <b>Serveis de Restauració</b></li>
-                        <li>Tècnic en <b>Elaboració de Productes Alimentosos</b></li>
-                        <li>Tècnic en <b>Fleca, Rebosteria i Confiteria</b></li>
-                        <li>Tècnic Superior en <b>Direcció de Cuina</b></li>
-                        <li>
-                            Tècnic Superior en <b>Direcció de Serveis de Restauració</b>
-                        </li>
+                        <li>Tècnic en <b>Cuina i gastronomia</b></li>
+                        <li>Tècnic Superior en <b>Direcció de cuina</b></li>
+                        <li>Curs d'Especialització en <b>Fleca i brioixeria artesanal</b></li>
+                        <li>Tècnic en <b>Fleca, rebosteria i confiteria</b></li>
+                        <li>Tècnic en <b>Elaboració de productes alimentosos</b></li>
                     </ul>
                     <p class="text subtitulo">Aplicacions</p>
                     <p class="text-profesional">
@@ -129,7 +126,7 @@
                             <p class="description">Vols saber més?</p>
                             <p class="description">
                                 Posa't en contacte amb <b>Juan&nbsp;Jóse,</b> el coordinador tècnic del skill de
-                                <b>Fleca&nbsp;i&nbsp;pastisseria</b>
+                                <b>Fleca</b>
                             </p>
                             <a href="mailto:jj.civerabendicho@edu.gva.es" class="mail">jj.civerabendicho@edu.gva.es</a>
                         </div>
