susana tecnologia automovil

--- a/especialidades/tecnologia_automovil.html
+++ b/especialidades/tecnologia_automovil.html
@@ -102,14 +102,9 @@
 
                     <p class="text subtitulo">Ciclos formativos relacionados</p>
                     <ul class="text text-padding-profesional">
-                        <li>
-                            Técnico Superior en
-                            <b>Automoción</b>
-                        </li>
-                        <li>
-                            Técnico en
-                            <b>Carrocería</b>
-                        </li>
+                        <li>Título Profesional Básico en <b>Mantenimiento de vehículos</b></li>
+                        <li>Técnico en <b>Electromecánica de vehículos</b></li>
+                        <li>Técnico Superior en <b>Automoción</b></li>
                     </ul>
                     <p class="text subtitulo">Aplicaciones</p>
                     <p class="text-profesional">
