--- a/especialidades/tecnologia_automovil_vlc.html
+++ b/especialidades/tecnologia_automovil_vlc.html
@@ -99,14 +99,9 @@
 
                     <p class="text subtitulo">Cicles formatius relacionats</p>
                     <ul class="text text-padding-profesional">
-                        <li>
-                            Tècnic Superior en
-                            <b>Automoció</b>
-                        </li>
-                        <li>
-                            Tècnic en
-                            <b>Carrosseria</b>
-                        </li>
+                        <li>Títol Professional Bàsic en <b>Manteniment de vehicles </b></li>
+                        <li>Tècnic en <b>Electromecànica de vehicles </b></li>
+                        <li>Tècnic Superior en <b>Automoció</b></li>
                     </ul>
                     <p class="text subtitulo">Aplicacions</p>
                     <p class="text-profesional">
