--- a/index_vlc.html
+++ b/index_vlc.html
@@ -179,6 +179,9 @@
                                 <li>
                                     <a class="item-menu" href="./especialidades/control_industrial_vlc.html">Control Industrial</a>
                                 </li>
+                                <li>
+                                    <a class="item-menu" href="./especialidades/sistemas_roboticos_vlc.html">Sistemes Robòtics Integrats</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
