--- a/especialidades/sistemas_roboticos_vlc.html
+++ b/especialidades/sistemas_roboticos_vlc.html
@@ -59,11 +59,11 @@
 
     <main>
         <section class="section-primary">
-            <h1 class="title-espec">Desenvolupament Web</h1>
+            <h1 class="title-espec">Sistemes Robòtics Integrats</h1>
             <div class="display-flow-especialidad">
                 <article class="wrapper-image-section-profesional">
                     <div>
-                        <img class="img-profesional" src="../img/skills/desarrollo_web.jpg" alt="Imagen desarrollo web" />
+                        <img class="img-profesional" src="../img/skills/sistemas_roboticos.jpg" alt="Imagen desarrollo web" />
                     </div>
 
                     <div class="position-profesional">
