--- a/especialidades/tecnologia_automovil_vlc.html
+++ b/especialidades/tecnologia_automovil_vlc.html
@@ -121,7 +121,7 @@
                                 Vols saber més?
                             </p>
                             <p class="*description">Posa't en contacte amb <b>Susana,</b> la coordinadora tècnica del skill de
-                                <b>Reparació&nbsp;de&nbsp;Carrosseria</b>
+                                <b>Tecnologia&nbsp;de&nbsp;l'Automòbil</b>
                             </p>
                             <a href="mailto:s.domenechmartinez@edu.gva.es" class="mail">s.domenechmartinez@edu.gva.es</a>
                         </div>
