alvert vidal pinoso

--- a/saber_mas/queson.html
+++ b/saber_mas/queson.html
@@ -69,6 +69,14 @@
                         Las "skills" son las competiciones de destrezas de la FP roganizadas por el Ministerio de Educación. Son un medio para estimular a los estudiantes, profesores y empresas; y una plataforma de intercambio y debate sobre la calidad y la innovación de los
                         diferentes campos.
                     </p>
+
+                    <p class="text-profesional">
+                        El fundador de las Skills fue <a href="https://ceice.gva.es/es/web/formacion-profesional/fundador_falbert">D.Francisco Albert Vidal</a> de Pinoso (Alicante) quien junto con Portugal celebró el Primer Campeonato Internacional de
+                        FP. En el año 2015 y por unanimidad del Pleno del Ayuntamiento, fue nombrado Hijo Predilecto de Pinoso. En reconocimiento a su labor WorldSkills establece el Premio Albert Vidal Award, al mejor participante que obtenga la puntuación
+                        más alta de toda la competición internacional.
+                    </p>
+
+
                     <p class="text-profesional">
                         Además de las competiciones a nivel autonómico y estatal, existen las WorldSkills y las EuroSkills, organizaciones sin ánimo de lucro que organizan competiciones de FP cada dos años.El objetivo es difundir información y compartir conocimiento sobre las
                         destrezas profesionales, reuniendo a instituciones de FP, empresas y asociaciones líderes. También es una manera de fomentarla caidad, la innovación y el intercambio cultural entre profesionales de todo el mundo.
