--- a/saber_mas/queson_vlc.html
+++ b/saber_mas/queson_vlc.html
@@ -74,6 +74,13 @@
                     <p class="text-profesional">
                         Les "skills" són les competicions de destreses de la FP roganitzades pel Ministeri de Educació. Són un mitjà per estimular els estudiants, professors i empreses; i una plataforma d'intercanvi i debat sobre la qualitat i la innovació dels diferents camps.
                     </p>
+
+                    <p class="text-profesional">
+                        El fundador de les Skills va ser <a href="https://ceice.gva.es/es/web/formacion-profesional/fundador_falbert">D.Francisco Albert Vidal</a> del Pinós (Alacant) qui juntament amb Portugal va celebrar el Primer Campionat Internacional
+                        d'FP. L'any 2015 i per unanimitat del Ple de l'Ajuntament, va ser nomenat Fill Predilecte del Pinós. En reconeixement a la seva labor Worldskills estableix el Premi Albert Vidal Award, al millor participant que obtingui la puntuació
+                        més alta de tota la competició internacional.
+                    </p>
+
                     <p class="text-profesional">
                         A més de les competicions a nivell autonòmic i estatal, hi ha les WorldSkills i les EuroSkills, organitzacions sense ànim de lucre que organitzen competicions de FP cada dos anys. L'objectiu és difondre informació i compartir coneixement sobre les destreses
                         professionals, reunint institucions de FP, empreses i associacions líders. També és una manera de fomentar la qualitat, la innovació i l'intercanvi cultural entre professionals de tot el món.
