--- a/saber_mas/queson_vlc.html
+++ b/saber_mas/queson_vlc.html
@@ -77,7 +77,7 @@
 
                     <p class="text-profesional">
                         El fundador de les Skills va ser <a href="https://ceice.gva.es/es/web/formacion-profesional/fundador_falbert">D.Francisco Albert Vidal</a> del Pinós (Alacant) qui juntament amb Portugal va celebrar el Primer Campionat Internacional
-                        d'FP. L'any 2015 i per unanimitat del Ple de l'Ajuntament, va ser nomenat Fill Predilecte del Pinós. En reconeixement a la seva labor Worldskills estableix el Premi Albert Vidal Award, al millor participant que obtingui la puntuació
+                        d'FP. L'any 2015 i per unanimitat del Ple de l'Ajuntament, va ser nomenat Fill Predilecte del Pinós. En reconeixement a la seva labor WorldSkills estableix el Premi Albert Vidal Award, al millor participant que obtingui la puntuació
                         més alta de tota la competició internacional.
                     </p>
 
