--- a/saber_mas/queson.html
+++ b/saber_mas/queson.html
@@ -66,7 +66,7 @@
 
                 <article class="wrapper-image-section-left-profesional">
                     <p class="text-profesional">
-                        Las "skills" son las competiciones de destrezas de la FP roganizadas por el Ministerio de Educación. Son un medio para estimular a los estudiantes, profesores y empresas; y una plataforma de intercambio y debate sobre la calidad y la innovación de los
+                        Las "skills" son las competiciones de destrezas de la FP organizadas por el Ministerio de Educación. Son un medio para estimular a los estudiantes, profesores y empresas; y una plataforma de intercambio y debate sobre la calidad y la innovación de los
                         diferentes campos.
                     </p>
 
@@ -79,7 +79,7 @@
 
                     <p class="text-profesional">
                         Además de las competiciones a nivel autonómico y estatal, existen las WorldSkills y las EuroSkills, organizaciones sin ánimo de lucro que organizan competiciones de FP cada dos años.El objetivo es difundir información y compartir conocimiento sobre las
-                        destrezas profesionales, reuniendo a instituciones de FP, empresas y asociaciones líderes. También es una manera de fomentarla caidad, la innovación y el intercambio cultural entre profesionales de todo el mundo.
+                        destrezas profesionales, reuniendo a instituciones de FP, empresas y asociaciones líderes. También es una manera de fomentar la calidad, la innovación y el intercambio cultural entre profesionales de todo el mundo.
                     </p>
                     <p class="text-profesional">
                         España pertenece a estas organizaciones, por lo que organiza las Spainskills (campeonato nacional de FP), para seleccionar a los alumnos que representaran a España en las competiciones europeas y mundiales.
