youtube no cookies

--- a/saber_mas/masquemedallas_vlc.html
+++ b/saber_mas/masquemedallas_vlc.html
@@ -95,7 +95,7 @@
         <section class="section-secondary">
             <article class="wrapper-video-section">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://www.youtube.com/embed/_vJiT8_ddlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/_vJiT8_ddlY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </article>
         </section>
