--- a/index_vlc.html
+++ b/index_vlc.html
@@ -260,7 +260,7 @@
                 </div>
 
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://www.youtube.com/embed/1TCSX9aVC3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/1TCSX9aVC3Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
             </article>
         </section>
