--- a/saber_mas/queson_vlc.html
+++ b/saber_mas/queson_vlc.html
@@ -94,7 +94,7 @@
         <section class="section-secondary">
             <article class="wrapper-video-section">
                 <div class="wrapper-video-section">
-                    <iframe class="video-skills" src="https://www.youtube.com/embed/no8QXq6CKAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
+                    <iframe class="video-skills" src="https://www.youtube-nocookie.com/embed/no8QXq6CKAo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
                 </div>
             </article>
         </section>
