jardineria - miguel angel

--- a/especialidades/jardineria_paisajistica.html
+++ b/especialidades/jardineria_paisajistica.html
@@ -118,9 +118,14 @@
                     </ul>
                     <p class="text subtitulo">Aplicaciones</p>
                     <p class="text-profesional">
-                        Las aplicaciones de este sector incluyen, además de la instalación y el mantenimiento de jardines, el diseño y la gestión de proyectos. Esto implica el conocimiento de distintos tipos de materiales, incluidos los que provienen de la reutilización y reciclaje,
-                        y de las plantas; el uso de herramientas, equipo, maquinaria y medio tecnológicos para la instalación y mantenimiento; el uso de las técnicas en beneficio del desarrollo sostenible y también conocimientos de construcción, de instalaciones
-                        eléctricas y de fontanería simples y de elementos prefabricados como mobiliario urbano, pequeños estanques, juegos infantiles.
+                        El sector de la jardinería y el paisajismo une "arte y técnica" para dar respuesta a las necesidades medioambientales del futuro.
+                    </p>
+                    <p class="text-profesional">
+                        El diseño y la restauración de paisajes, la gestión de proyectos, la instalación y mantenimiento de parques y jardines son y seguiran siendo aplicaciones de alto valor para el cuidado de la Naturaleza y el Medio Ambiente.
+                    </p>
+                    <p class="text-profesional">
+                        El conocimiento de las plantas, los materiales de construcción, incluidos los que provienen del reciclaje, el estudio del juego infantil en los espacios verdes, las instalaciones de riego eficientes, la maquinaria y los medios tecnológicos, están en la
+                        base de la capacitación de los futuros/as profesionales a través de la Formación Profesional Agraria.
                     </p>
                 </article>
                 <div class="card-container-profile">
