--- a/especialidades/jardineria_paisajistica_vlc.html
+++ b/especialidades/jardineria_paisajistica_vlc.html
@@ -118,9 +118,14 @@
                     </ul>
                     <p class="text subtitulo">Aplicacions</p>
                     <p class="text-profesional">
-                        Les aplicacions d'aquest sector inclouen, a més de la instal·lació i el manteniment de jardins, el disseny i la gestió de projectes. Això implica el coneixement de diferents tipus de materials, inclosos els que provenen de la reutilització i reciclatge,
-                        i de les plantes; l'ús d'eines, equip, maquinària i mig tecnològics per a la instal·lació i manteniment; l'ús de les tècniques en benefici del desenvolupament sostenible i també coneixements de construcció, d'instal·lacions elèctriques
-                        i de lampisteria simples i d'elements prefabricats com a mobiliari urbà, xicotets estanys, jocs infantils.
+                        El sector de la jardineria i el paisatgisme uneix "art i tècnica" per a donar resposta a les necessitats mediambientals del futur.
+                    </p>
+                    <p class="text-profesional">
+                        El disseny i la restauració de paisatges, la gestió de projectes, la instal·lació i manteniment de parcs i jardins són i continuaran sent aplicacions d'alt valor per a la cura de la Naturalesa i el Medi Ambient.
+                    </p>
+                    <p class="text-profesional">
+                        El coneixement de les plantes, els materials de construcció, inclosos els que provenen del reciclatge, l'estudi del joc infantil en els espais verds, les instal·lacions de reg eficients, la maquinària i els mitjans tecnològics, estan en la base de la
+                        capacitació dels futurs/as professionals a través de la Formació Professional Agrària.
                     </p>
                 </article>
                 <div class="card-container-profile">
