atencion_sociosanitaria_lucia

--- a/especialidades/atencion_sociosanitaria.html
+++ b/especialidades/atencion_sociosanitaria.html
@@ -97,8 +97,8 @@
                 </article>
                 <article class="wrapper-image-section-left-profesional">
                     <p class="text-profesional-last">
-                        Incluye los cuidados y vigilancia del estado físico de un o una paciente o usuario, la colaboración en la prestación de cuidados psíquicos, el cuidado de las condiciones sanitarias del entorno del paciente o usuario y las tareas de instrumentación, tanto
-                        a nivel hospitalario, como en atención primaria así como en equipos bucodental.
+                        Incluye los cuidados y vigilancia del estado físico de un o una paciente o usuario, la colaboración en la prestación de cuidados psíquicos, el cuidado de las condiciones sanitarias del entorno del o la paciente o usuario/a y las tareas de instrumentación,
+                        tanto a nivel hospitalario como en atención primaria así como en equipos de salud bucodental.
                     </p>
 
                     <p class="text subtitulo">Ciclos formativos relacionados</p>
