--- a/especialidades/atencion_sociosanitaria_vlc.html
+++ b/especialidades/atencion_sociosanitaria_vlc.html
@@ -98,8 +98,8 @@
                 </article>
                 <article class="wrapper-image-section-left-profesional">
                     <p class="text-profesional-last">
-                        Inclou les cures i vigilància de l'estat físic d'un o una pacient o usuari, la col·laboració en la prestació de cures psíquiques, la cura de les condicions sanitàries de l'entorn del pacient o usuari i les tasques d'instrumentació, tant a nivell hospitalari,
-                        com en atenció primària així com en equips bucodental.
+                        Inclou les cures i vigilància de l'estat físic d'un o una pacient o usuari, la col·laboració en la prestació de cures psíquiques, la cura de les condicions sanitàries de l'entorn de l'o la pacient o usuari/a i les tasques d'instrumentació, tant a nivell
+                        hospitalari com en atenció primària així com en equips de salut bucodental.
                     </p>
 
                     <p class="text subtitulo">Cicles formatius relacionats</p>
