--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
                                 <li>
                                     <a class="item-menu" href="./especialidades/atencion_sociosanitaria.html">Atención Sociosanitaria</a>
                                 </li>
+                                <li>
+                                    <a class="item-menu" href="./especialidades/recepcion_hotelera.html">Recepción Hotelera</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
