--- a/index_vlc.html
+++ b/index_vlc.html
@@ -111,12 +111,13 @@
                                     <a class="item-menu" href="./especialidades/cocina_vlc.html">Cuina</a>
                                 </li>
                                 <li>
-                                    <a class="item-menu" href="./especialidades/servicios_restaurante_bar_vlc.html">Serveis de Restaurant
-                    i Bar</a>
+                                    <a class="item-menu" href="./especialidades/servicios_restaurante_bar_vlc.html">Serveis de Restaurant i Bar</a>
                                 </li>
                                 <li>
-                                    <a class="item-menu" href="./especialidades/atencion_sociosanitaria_vlc.html">Atenció
-                    Sociosanitària</a>
+                                    <a class="item-menu" href="./especialidades/atencion_sociosanitaria_vlc.html">Atenció Sociosanitària</a>
+                                </li>
+                                <li>
+                                    <a class="item-menu" href="./especialidades/recepcion_hotelera_vlc.html">Recepció Hotelera</a>
                                 </li>
                             </ul>
                         </div>
