estetica_inma-textos

--- a/especialidades/estetica.html
+++ b/especialidades/estetica.html
@@ -97,24 +97,29 @@
                 </article>
                 <article class="wrapper-image-section-left-profesional">
                     <p class="text-profesional-last">
-                        Modalidad en la que se trabaja la planificación, aplicación y comercialización de tratamientos faciales, corporales, para pies y manos, y maquillaje, el conocimiento de los productos y los métodos para el cuidado de la piel y el cuerpo.
+                        Modalidad en la que se trabaja la planificación, coordinación, realización, aplicación y comercialización de tratamientos faciales, corporales, para pies y manos, y maquillaje, el conocimiento de los productos y los métodos para el cuidado de la piel
+                        y el cuerpo.
                     </p>
 
                     <p class="text subtitulo">Ciclos formativos relacionados</p>
                     <ul class="text text-padding-profesional">
                         <li>Técnico en <b>Estética y Belleza</b></li>
                         <li>Técnico Superior en <b>Estética Integral y Bienestar</b></li>
-                        <li>Técnico Superior en <b>Caracterización y Maquillaje</b></li>
+                        <li>Técnico Superior en <b>Caracterización y Maquillaje Profesional</b></li>
+                        <li>Técnico Superior en <b>Termalismo</b></li>
                     </ul>
                     <p class="text subtitulo">Aplicaciones</p>
                     <p class="text-profesional">
-                        Los profesionales ejercen su actividad en medianas y pequeñas empresas que tienen relación directa con la imagen personal, particularmente en establecimientos del sector servicios de estética y peluquería, y en general en establecimientos relacionados
-                        con la venta de productos de imagen personal así como con la cosmética, desempeñando tareas de ejecución de maquillaje social, depilación mecánica, tratamientos básicos de higiene, hidratación facial y corporal, estética de manos
-                        y pies, asesoramiento sobre perfumes y cosmética natural, así como la comercialización de los productos y servicios estéticos, ofreciendo un servicio de atención a los clientes de la empresa.
-                        <br />
+                        Los profesionales ejercen su actividad en medianas y pequeñas empresas que tienen relación directa con la imagen personal y el bienestar, así como en clínicas de medicina estética; particularmente en establecimientos del sector servicios de estética y
+                        bienestar, y en los relacionados con la venta y asesoramiento sobre perfumes y cosmética natural y productos de imagen personal, desempeñando tareas de organización y dirección del desarrollo de los servicios estéticos, de ejecución
+                        de maquillaje social y profesional, depilación, tratamientos de higiene e hidratación facial y corporal, estética de manos y pies, , así como la comercialización de los productos y servicios estéticos, ofreciendo un servicio de
+                        atención a los clientes de la empresa.
                     </p>
                     <p class="text-profesional">
-                        También ejercen su actividad en las áreas de tratamientos estéticos integrales, estética hidrotermal, microimplantación de pigmentos, depilación avanzada, masaje estético y drenaje, y asesoramiento en tratamientos y productos cosméticos.
+                        También ejercen su actividad en las áreas de tratamientos estéticos integrales, electroestética, estética hidrotermal, microimplantación de pigmentos, depilación avanzada, masaje estético y drenaje, y asesoramiento en tratamientos y productos cosméticos.
+                    </p>
+                    <p class="text-profesional">
+                        De la misma manera, planifican, coordinan y realizan el montaje de proyectos de caracterización para medios audiovisuales y escénicos, así como diseñan y realizan prótesis y maquillajes sociales, profesionales y artísticos.
                     </p>
                     <p class="text-profesional">
                         Podrían ser trabajadores por cuenta propia efectuando la organización y gestión de su empresa.
