--- a/especialidades/estetica_vlc.html
+++ b/especialidades/estetica_vlc.html
@@ -97,27 +97,30 @@
                 </article>
                 <article class="wrapper-image-section-left-profesional">
                     <p class="text-profesional-last">
-                        Modalitat en la qual es treballa la planificació, aplicació i comercialització de tractaments facials, corporals, per a peus i mans, i maquillatge, el coneixement dels productes i els mètodes per a la cura de la pell i el cos.
+                        Modalitat en la qual es treballa la planificació, coordinació, realització, aplicació i comercialització de tractaments facials, corporals, per a peus i mans, i maquillatge, el coneixement dels productes i els mètodes per a la cura de la pell i el cos.
                     </p>
 
                     <p class="text subtitulo">Cicles formatius relacionats</p>
                     <ul class="text text-padding-profesional">
                         <li>Tècnic en <b>Estètica i Bellesa</b></li>
                         <li>Tècnic Superior en <b>Estètica Integral i Benestar</b></li>
-                        <li>Tècnic Superior en <b>Caracterització i Maquillatge</b></li>
+                        <li>Tècnic Superior en <b>Caracterització i Maquillatge Professional</b></li>
+                        <li>Tècnic Superior en <b>Termalisme</b></li>
                     </ul>
                     <p class="text subtitulo">Aplicacions</p>
                     <p class="text-profesional">
-                        Els professionals exerceixen la seua activitat en mitjanes i petites empreses que tenen relació directa amb la imatge personal, particularment en establiments del sector serveis d'estètica i perruqueria, i en general en establiments relacionats amb la
-                        venda de productes d'imatge personal així com amb la cosmètica, exercint tasques d'execució de maquillatge social, depilació mecànica, tractaments bàsics d'higiene, hidratació facial i corporal, estètica de mans i peus, assessorament
-                        sobre perfums i cosmètica natural, així com la comercialització dels productes i serveis estètics, oferint un servei d'atenció als clients de l'empresa.
-                        <br />
+                        Els professionals exerceixen la seva activitat en mitjanes i petites empreses que tenen relació directa amb la imatge personal i el benestar, així com en clíniques de medicina estètica; particularment en establiments del sector serveis d'estètica i benestar,
+                        i en els relacionats amb la venda i assessorament sobre perfums i cosmètica natural i productes d'imatge personal, exercint tasques d'organització i direcció del desenvolupament dels serveis estètics, d'execució de maquillatge
+                        social i professional, depilació, tractaments d'higiene i hidratació facial i corporal, estètica de mans i peus, , així com la comercialització dels productes i serveis estètics, oferint un servei d'atenció als clients de l'empresa.
                     </p>
                     <p class="text-profesional">
-                        També exerceixen la seua activitat en les àrees de tractaments estètics integrals, estètica hidrotermal, microimplantació de pigments, depilació avançada, massatge estètic i drenatge, i assessorament en tractaments i productes cosmètics.
+                        També exerceixen la seva activitat en les àrees de tractaments estètics integrals, electroestética, estètica hidrotermal, microimplantació de pigments, depilació avançada, massatge estètic i drenatge, i assessorament en tractaments i productes cosmètics.
                     </p>
                     <p class="text-profesional">
-                        Podrien ser treballadors per compte propi efectuant l'organització i gestió de la seua empresa.
+                        De la mateixa manera, planifiquen, coordinen i realitzen el muntatge de projectes de caracterització per a mitjans audiovisuals i escènics, així com dissenyen i realitzen pròtesis i maquillatges socials, professionals i artístics.
+                    </p>
+                    <p class="text-profesional">
+                        Podrien ser treballadors per compte propi efectuant l'organització i gestió de la seva empresa.
                     </p>
                 </article>
                 <div class="card-container-profile">
