cloud_computing-david

--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
                                     <a class="item-menu" href="./especialidades/administracion_sistemas_red.html">TIC Administración de
                     Sistemas en Red</a>
                                 </li>
+                                <li>
+                                    <a class="item-menu" href="./especialidades/cloud_computing.html">Cloud computing</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
