--- a/index_vlc.html
+++ b/index_vlc.html
@@ -204,6 +204,9 @@
                                     <a class="item-menu" href="./especialidades/administracion_sistemas_red_vlc.html">TIC Administració
                     de Sistemes en Xarxa</a>
                                 </li>
+                                <li>
+                                    <a class="item-menu" href="./especialidades/cloud_computing_vlc.html">Cloud computing</a>
+                                </li>
                             </ul>
                         </div>
                     </div>
