--- a/index_vlc.html
+++ b/index_vlc.html
@@ -273,7 +273,7 @@
             <article class="info-medallas">
                 <div class="wrapper-image-section-right">
                     <h1 class="title">On i quan?</h1>
-                    <h4>En Fira València els díes de 27 al 31 de Març</h4>
+                    <h4>En Fira València els díes de 27 al 31 de Març de 2023</h4>
                     <br>
                     <h2>Com anar?</h2>
                     <br>
