--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <article class="info-medallas">
                 <div class="wrapper-image-section-right">
                     <h1 class="title">¿Dónde y cuándo?</h1>
-                    <h4>En Feria Valencia los días 27 a 31 de Marzo</h4>
+                    <h4>En Feria Valencia los días 27 a 31 de Marzo de 2023</h4>
                     <br>
                     <h2>¿Cómo llegar?</h2>
                     <br>
