--- a/especialidades/disenyo_animacion_juegos.html
+++ b/especialidades/disenyo_animacion_juegos.html
@@ -96,11 +96,13 @@
                     </div>
                 </article>
                 <article class="wrapper-image-section-left-profesional">
-                    <p class="text-profesional-last">
+                    <p class="text-profesional">
                         Esta modalidad se incluye dentro del sector de la animación 2D y 3D, así como la creación de videojuegos. Para la creación artística de videojuegos 3D se parte de las premisas de los diseñadores de videojuegos y se realizan con una combinación de conceptualización,
                         creatividad y puesta en práctica de habilidades técnicas de dibujo, animación, modelado, texturizado y programación.
                     </p>
-
+                    <p class="text-profesional-last">
+                        Para poder competir es necesario estar matriculado en el ciclo de Animaciones 3D, Juegos y Entornos Interactivos de la familia de Imagen y Sonido.
+                    </p>
                     <p class="text subtitulo">Ciclos formativos relacionados</p>
                     <ul class="text text-padding-profesional">
                         <li>
