--- a/especialidades/disenyo_animacion_juegos_vlc.html
+++ b/especialidades/disenyo_animacion_juegos_vlc.html
@@ -97,9 +97,12 @@
                     </div>
                 </article>
                 <article class="wrapper-image-section-left-profesional">
-                    <p class="text-profesional-last">
+                    <p class="text-profesional">
                         Aquesta modalitat s'inclou dins del sector de l'animació 2D i 3D, així com la creació de videojocs. Per a la creació artística de videojocs 3D es parteix de les premisses dels dissenyadors de videojocs i es realitzen amb una combinació de conceptualització,
                         creativitat i posada en pràctica d'habilitats tècniques de dibuix, animació, modelatge, texturat i programació.
+                    </p>
+                    <p class="text-profesional-last">
+                        Per a poder competir és necessari estar matriculat en el cicle d'Animacions 3D, Jocs i Entorns Interactius de la família d'Imatge i So.
                     </p>
 
                     <p class="text subtitulo">Cicles formatius relacionats</p>
